# L3

./: .gitignore  CMakeLists.txt  Dockerfile  L3  L3.doxygen  README.md  WORKSPACE  environment.sh  libraries.json  run_demo.sh
app/: BUILD  CMakeLists.txt  app.cpp  headless.cpp
cmake_modules/: FindBULLET.cmake  FindBayes++.cmake  FindCommon.cmake  FindGLConsole.cmake  FindIPP.cmake  FindMI.cmake  FindPOCO.cmake  FindTBB.cmake
common/: BUILD  CMakeLists.txt
common/estimation/: Pose.cpp  Pose.h
common/imagery/: Imagery.cpp  Imagery.h
common/imagery/tests/: CMakeLists.txt  test_load_image.cpp
configurations/datums/: begbroke_datum.config  kidlington_datum.config  map.config  woodstock_datum.config
configurations/missions/: 2011-02-07-14-33-37bebrokeGPSLaser.config  2011-04-18-15-38-063dBumbRTK2DLaser.config  2011-05-17-10-00-453dl_2dl_GPS_BUMB_BB.config  2011-06-08-10-06-16BB_2L_2BumbleB_2Laps.config  2011-06-08-12-20-24BB_2L_2BumbleBee_2Laps_2.config  2011-06-10-11-13-50_BB_2L_2BumbB_2Laps_1.config  2011-06-14-08-12-26_BB_2L_1Bumb_2laps_0.config  2011-06-14-10-15-18_2l_BB_GPS_2Laps_DEMO.config  2011-06-14-10-52-58_2l_BB_GPS_2Laps_DEMO.config  2011-06-14-11-09-41_2l_BB_GPS_2Laps_DEMO.config  2011-06-14-16-18-29_BB_2L_2Bumb_2laps_2.config  2011-06-21-11-54-29_BB_2L_2Bumb_2laps_1.config  2011-07-12-12-41-58_begbroke_everything.config  2011-08-15-11-52-26_GPS_TRIMBLE_ROOF.config  2011-08-15-15-46-55_2Laps_BB_Everything.config  2011-08-16-09-18-16_BB_2LAPS.config  2011-08-16-12-35-43_2laps_full_sensors.config  2011-08-18-18-55-51_evening_run_2.config  2011-08-18-19-07-22_evening_run_3.config  2011-08-18-19-40-55_evening_run_6.config  2011-08-19-10-10-05_BB_2laps_fullsensors.config  2011-08-19-10-33-24_BB_2laps_fullsensors.config  2011-08-25-13-06-07_naboo_2laps_BB_1_clockwise.config  2011-08-25-13-10-44_naboo_2laps_BB_2.config  2012-02-06-13-15-35mistsnow.config  (+31 more)
core/: AbstractFactory.cpp  AbstractFactory.h  AlgorithmFactory.h  BUILD  CMakeLists.txt  ChainBuilder.cpp  ChainBuilder.h  Configuration.cpp  Configuration.h  Core.cpp  Core.h  CostFactory.h  DataAdapters.h  Dataset.cpp  Dataset.h  Datatypes.cpp  Datatypes.h  Definitions.h  Estimator.cpp  Estimator.h  Estimator.hpp  Experience.cpp  Experience.h  Filter.cpp  Filter.h  Filter.hpp  Histogram.cpp  Histogram.h  Histogrammer.h  Integrator.cpp  Integrator.h  Integrator.hpp  Iterator.cpp  Iterator.h  L3.h  LibraryAdapters.h  Misc.cpp  Misc.h  Optimization.h  Performance.cpp  (+46 more)
core/apps/: BUILD  CMakeLists.txt  LHLV_extractor.cpp  LHLV_filter.cpp  bulk_runner.cpp  experience_builder.cpp  experience_generator.cpp  load_poses.cpp  load_scans.cpp  reflectance_builder.cpp  road_builder.cpp  test_config.cpp
core/tests/: CMakeLists.txt  test_bayes.cpp  test_binary_reader.cpp  test_buffered_swathe_builder_LHLV.cpp  test_chain_builder.cpp  test_configuration.cpp  test_conversions.cpp  test_data_adapters.cpp  test_data_providers.cpp  test_dataset.cpp  test_dataset_runner.cpp  test_estimator.cpp  test_estimator_runner.cpp  test_experience_builder.cpp  test_experience_generator.cpp  test_experience_loader.cpp  test_experience_pipeline.cpp  test_experience_query.cpp  test_find_closest.cpp  test_gsl_copy_vs_create.cpp  test_histogram_smoothing.cpp  test_histogrammer.cpp  test_include_order.cpp  test_ipp.cpp  test_iterator.cpp  test_itpp.cpp  test_kl_computation.cpp  test_length_estimator.cpp  test_libICP.cpp  test_libconfig.cpp  test_library_adapters.cpp  test_locale.cpp  test_minimisation.cpp  test_pipeline.cpp  test_pipeline_stage_0.cpp  test_pipeline_stage_1.cpp  test_pipeline_stage_2.cpp  test_pipeline_stage_3.cpp  test_point_cloud.cpp  test_point_cloud_copy.cpp  (+21 more)
estimators/: ICP.h
interfaces/: CMakeLists.txt  core.cpp
learning/: Analysis.py  Clustering.h  Dataset.py  Math.py  Plotting.py  Sensors.py
media/: 128x128
processor/: Experience.h  Processor.h
renderer/: Adapters.h  AlgorithmRenderer.cpp  AlgorithmRenderer.h  BUILD  BulletInterface.h  CMakeLists.txt  Clock.h  CocoaListener.h  CommandInterface.cpp  CommandInterface.h  Components.cpp  Components.h  Container.h  Controller.cpp  Controller.h  Controls.h  DataAdapters.h  DataProvider.h  DatasetController.h  DatasetTools.h  DebugAlgorithmRenderer.h  ExternalInterface.cpp  ExternalInterface.h  GLVInterface.cpp  GLVInterface.h  Handler.h  Imagery.cpp  Imagery.h  L3Interface.cpp  L3Interface.h  L3Vis.h  Layouts.cpp  Layouts.h  LogCapture.cpp  LogCapture.h  Node.h  Plotters.cpp  Plotters.h  QueryInterface.cpp  QueryInterface.h  (+22 more)
renderer/apps/: CMakeLists.txt  L3.cpp  calibrate_map.cpp  dataset_overview.cpp  experience_builder.cpp  experience_plotter.cpp  plot_chain_builder.cpp  plot_experience.cpp  plot_lhlv.cpp  plot_point_cloud.cpp  plot_pose_chain.cpp  run_renderer.cpp
renderer/tests/: CMakeLists.txt  test_L3.cpp  test_adapters.cpp  test_algorithm.cpp  test_app.cpp  test_back_integrator.cpp  test_camera_transform.cpp  test_chain_builder.cpp  test_component.cpp  test_composite.cpp  test_container.cpp  test_controller.cpp  test_controls.cpp  test_coordinate_transforms.cpp  test_data_providers.cpp  test_dataset_layout.cpp  test_divergence.cpp  test_draw_cube.cpp  test_estimator.cpp  test_estimator_layout.cpp  test_estimator_prediction.cpp  test_experience_pipeline.cpp  test_experience_renderer.cpp  test_freetype.cpp  test_histogram_renderer.cpp  test_histogram_smoothing.cpp  test_imagery.cpp  test_input  test_input.cpp  test_integrator.cpp  test_interface.cpp  test_iterator.cpp  test_itpp.cpp  test_kinematics.cpp  test_layout.cpp  test_libglf.cpp  test_pipeline_stage_1.cpp  test_pipeline_stage_2.cpp  test_pipeline_stage_3.cpp  test_pipeline_stage_4.cpp  (+19 more)
scripts/: a.lua  args.lua  estimate.L3  list.lua  listing.lua  load.L3  load_dataset.L3  load_experience.L3  load_trajectories.L3  print_directory.lua  shell.lua  test.L3  test.lua
utils/: BUILD  CMakeLists.txt  Interface.cpp  Interface.h  lua_interface.cpp  octave_interface.cpp  viewer.cpp
utils/tests/: CMakeLists.txt  test_lua_interface.cpp  test_regex.cpp
utils/validation/: Reader.py  Visualiser.py
(+96 files in other folders)
