#add_executable( pcl_viewer viewer.cpp )
#target_link_libraries( pcl_viewer pcl_visualization )

#find_package( OCTAVE )
#include_directories( ${OCTAVE_INCLUDE_DIR} )
#add_executable( octave_interface octave_interface.cpp )
#target_link_libraries( octave_interface )

#add_executable( lua_interface lua_interface.cpp )
#target_link_libraries( lua_interface lua )


