#add_executable( run_renderer run_renderer.cpp )
#target_link_libraries( run_renderer ${GLV_LIBRARY} ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} L3 L3Vis  ${Boost_LIBRARIES})

#add_executable( plot_lhlv plot_lhlv.cpp )
#target_link_libraries( plot_lhlv ${GLV_LIBRARY} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} L3 L3Vis  ${Boost_LIBRARIES})

#add_executable( plot_pose_chain plot_pose_chain.cpp )
#target_link_libraries( plot_pose_chain ${GLV_LIBRARY} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} L3 L3Vis  ${Boost_LIBRARIES})

#add_executable( plot_point_cloud plot_point_cloud.cpp )
#target_link_libraries( plot_point_cloud ${GLV_LIBRARY} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} L3 L3Vis  ${Boost_LIBRARIES})

#add_executable( plot_chain_builder plot_chain_builder.cpp )
#target_link_libraries( plot_chain_builder ${GLV_LIBRARY} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} L3 L3Vis  ${Boost_LIBRARIES})

#add_executable( experience_plotter experience_plotter.cpp )
#target_link_libraries( experience_plotter ${GLV_LIBRARY} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} L3 L3Vis  ${Boost_LIBRARIES} ${Poco_LIBRARIES} ${CONFIG} )

#add_executable( calibrate_map calibrate_map.cpp )
#target_link_libraries( calibrate_map ${GLV_LIBRARY} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} L3 L3Vis  ${Boost_LIBRARIES} ${Poco_LIBRARIES} ${LUA_LIBRARIES} )

#add_executable( dataset_overview dataset_overview.cpp )
#target_link_libraries( dataset_overview ${GLV_LIBRARY} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} L3 L3Vis  ${Boost_LIBRARIES} readline curses )

#add_executable( experience_builder_app experience_builder.cpp )
#target_link_libraries( experience_builder_app ${GLV_LIBRARY} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} L3 L3Vis  ${Boost_LIBRARIES} readline curses )

